# glassdoor-score-scraper

./: Cargo.toml  README.md
data/: Working-at-Amazon-EI_IE6036.11,17.htm  Working-at-Google-EI_IE9079.11,17.htm  https __www.glassdoor.com_Explore_top-companies-united-states_IL.14,27_IN1.htm
src/: main.rs  query.rs
