[package]
name = "glassdoor-score-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros", "time"] }
